Upsert implementation for R2DBC